Wed Mar 23 13:17:54 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * bin/fuzz.pl:

          Enabled the numeric dance log check at a lower level so it will
          run with the fuzz build.

Tue Mar 22 21:09:14 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Acceptor.h:
          Doxygen change

        * ace/config-win32-borland.h:
          Updated comment

Tue Mar 22 15:40:00 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/os_include/os_ifaddrs.h:
          New wrapper file

        * ace/OS_NS_stdlib.inl:
        * ace/config-WinCE.h:
          Added new define to not check for OS in OS_NS_ file

        * ace/Sock_Connect.cpp:
          use new os_ifaddrs.h wrapper

        * tests/Dirent_Test.cpp:
        * tests/Test_Output.cpp:
          Cleanup

Tue Mar 22 09:24:54 UTC 2011  Olli Savia  <ops@iki.fi>

        * ace/config-openbsd.h:
          Added back ACE_LACKS_SETSCHED. OpenBSD does not provide
          implementation.

Tue Mar 22 09:18:44 UTC 2011  Olli Savia  <ops@iki.fi>

        * ace/config-lynxos.h:
          Reverted: Mon Mar 21 16:10:05 UTC 2011  Olli Savia  <ops@iki.fi>
          Put back ACE_LACKS_RLIMIT_NOFILE. The problem with LynxOS 4.2
          seems to be rlimit.

Mon Mar 21 20:40:36 UTC 2011  James Edmondson  <james.r.edmondson@vanderbilt.edu>

        * bin/fuzz.pl:
          Commented out lines that may be used for debugging the
          trace error checker

Mon Mar 21 20:18:52 UTC 2011  James Edmondson  <james.r.edmondson@vanderbilt.edu>

        * bin/fuzz.pl:
          Reverted previous changes

Mon Mar 21 19:07:52 UTC 2011  James Edmondson  <james.r.edmondson@vanderbilt.edu>

        * bin/fuzz.pl:
          Stopped fuzz.pl from looking into lib/bin/Debug/Release
          Stopped fuzz.pl from considering *C.* and *S.* generated files
          Stopped fuzz.pl from considering *_export.h

Mon Mar 21 19:02:57 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>
